fix(backend): fix tsconfig moduleResolution and implement impact HTTP conditional caching
